--- a/index.html
+++ b/index.html
@@ -406,12 +406,13 @@
 
       <div class="exp-card">
         <h3>Konten Kreator</h3>
-        <p>Sebelum menjadi ASN, saya aktif sebagai konten kreator yang membuat video seputar wisata, kuliner, berita lokal, dan budaya. Fokus utama saya adalah menampilkan potensi daerah Kabupaten Nganjuk melalui platform Instagram. Dari kegiatan ini, saya belajar tentang riset lokasi, pengambilan gambar, dan penyuntingan video untuk membangun konten yang menarik dan informatif.</p>
+        <p>Membuat Konten Video Wisata, Berita, kuliner Dan Budaya.
+</p>
       </div>
 
       <div class="exp-card">
         <h3>ASN</h3>
-        <p>Pada akhir tahun 2020, saya resmi menjadi Aparatur Sipil Negara dan bertugas sebagai Back Office di Dinas Kependudukan dan Catatan Sipil (Dispendukcapil) Kota Blitar. Saya berperan dalam pengelolaan data dan informasi administrasi kependudukan, serta membantu pelayanan masyarakat dalam pengurusan dokumen penting seperti Kartu Keluarga, Akta Kelahiran, dan KTP elektronik.</p>
+        <p>Menjadi Back Office Di Dispendukcapil Kota Blitar.</p>
       </div>
 
     </div>
